trunk/Archive2/0a/89c17866d3e985/output
main.cpp:4:9: error: declaration of 'foo bar::foo' [-fpermissive]
     foo foo;
         ^
main.cpp:1:12: error: changes meaning of 'foo' from 'enum class foo' [-fpermissive]
 enum class foo { };
            ^
